soroban-sdk/tests/trybuild/contractimport_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: a99f9c800317a653dd6fe106e6c9789f0033b69b6bf9ff4c7fcdd63530557cb3
 --> tests/trybuild/contractimport_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^
